gramatica.txt
Gramática MiniJS - Tema 39568_15
=================================

Gramática en notación BNF/EBNF:

Program         ::= { Statement }
Statement       ::= ArrayDeclaration | ForStatement | ConsoleStatement
ArrayDeclaration::= "let" Identifier "=" "[" [ ExpressionList ] "]" ";"
ExpressionList  ::= Expression { "," Expression }
ForStatement    ::= "for" "(" AssignmentStatement Expression ";" AssignmentStatement ")" Block
AssignmentStatement ::= Identifier "=" Expression
ConsoleStatement::= "console" "." "log" "(" Expression ")" ";"
Block           ::= "{" { Statement } "}"
Expression      ::= Term { ("+" | "-" | "*" | "/") Term }
Term            ::= Identifier | Number | "(" Expression ")"
Identifier      ::= letter { letter | digit | "_" }
Number          ::= digit { digit }
letter          ::= "a" | ... | "z" | "A" | ... | "Z"
digit           ::= "0" | ... | "9"

Tokens definidos:
- LET       : 'let'
- FOR       : 'for'
- CONSOLE   : 'console'
- LOG       : 'log'
- ASSIGN    : '='
- SEMI      : ';'
- COMMA     : ','
- DOT       : '.'
- LBRACKET  : '['
- RBRACKET  : ']'
- LPAREN    : '('
- RPAREN    : ')'
- LBRACE    : '{'
- RBRACE    : '}'
- PLUS      : '+'
- MINUS     : '-'
- MULT      : '*'
- DIV       : '/'
- IDENTIFIER: [a-zA-Z][a-zA-Z0-9_]*
- NUMBER    : [0-9]+
- WS        : (ignorado)
